fix: fixed right overflow bug on x axis

--- a/styles/sass/partials/_base.scss
+++ b/styles/sass/partials/_base.scss
@@ -35,3 +35,8 @@ h4 {
     margin: 0;
     padding: 0;
 }
+
+html,
+body {
+    overflow-x: hidden;
+}
