--- a/styles/styles.css
+++ b/styles/styles.css
@@ -326,6 +326,11 @@ h4 {
   padding: 0;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 .skip-link {
   position: absolute;
   left: 50%;
